Fix: copyright in wrong position on mobile devices

--- a/app.css
+++ b/app.css
@@ -77,6 +77,7 @@ p {
 
 .container {
   width: 85%;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -410,7 +411,10 @@ footer .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  left: 20px;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  margin: auto;
   bottom: -20%;
   padding-bottom: 1rem;
 }
@@ -429,6 +433,7 @@ footer .container {
 @media (min-width: 1440px) {
   .container {
     width: 80%;
+    max-width: unset;
   }
 
   /* HEADER STYLES */
